@@ -310,7 +310,7 @@ public class AddSpecialScheduleController {
     // Helper methods to get available data
     private List<Course> getAvailableCourses() {
         try {
-            return CourseDAO.getAllCourses();
+            return CourseDAO.getCourseList();
         } catch (Exception e) {
             e.printStackTrace();
             return new java.util.ArrayList<>();
@@ -348,17 +348,24 @@ public class AddSpecialScheduleController {
         try {
             List<ClassSlot> slots = ClassSlotDAO.getAllSlots();
             List<LocalTime> times = new java.util.ArrayList<>();
+
             for (ClassSlot slot : slots) {
                 times.add(slot.getStartTime());
                 times.add(slot.getEndTime());
             }
+
             times.sort(LocalTime::compareTo);
+
             // Remove duplicates
-            return times.stream().distinct().toList();
+            return times.stream()
+                    .distinct()
+                    .collect(java.util.stream.Collectors.toList());
+
         } catch (Exception e) {
             e.printStackTrace();
             return new java.util.ArrayList<>();
         }
     }
+
 }
 
